// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderCustomToolbar should render correctly for embeddable 1`] = `
<EuiFlexGroup
  alignItems="center"
  className="dscGridToolbar"
  data-test-subj="dscGridToolbar"
  gutterSize="s"
  justifyContent="spaceBetween"
  responsive={false}
  wrap={true}
>
  <EuiFlexItem
    grow={false}
  >
    <TotalDocuments
      totalHitCount={500}
    />
  </EuiFlexItem>
  <EuiFlexItem
    grow={false}
  >
    <EuiFlexGroup
      alignItems="center"
      gutterSize="s"
      responsive={false}
    >
      <React.Fragment>
        <EuiFlexItem
          grow={false}
        >
          <div
            className="dscGridToolbarControlButton"
          >
            additional
          </div>
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <div
            className="dscGridToolbarControlButton"
          >
            column
          </div>
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <div
            className="dscGridToolbarControlButton"
          >
            columnSorting
          </div>
        </EuiFlexItem>
      </React.Fragment>
      <EuiFlexItem
        grow={false}
      >
        <div
          className="dscGridToolbarControlGroup"
        >
          <div
            className="dscGridToolbarControlIconButton"
          >
            keyboard
          </div>
          <div
            className="dscGridToolbarControlIconButton"
          >
            display
          </div>
          <div
            className="dscGridToolbarControlIconButton"
          >
            fullScreen
          </div>
        </div>
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`renderCustomToolbar should render correctly for smaller screens 1`] = `
<EuiFlexGroup
  alignItems="center"
  className="dscGridToolbar"
  data-test-subj="dscGridToolbar"
  gutterSize="s"
  justifyContent="spaceBetween"
  responsive={false}
  wrap={true}
>
  <EuiFlexItem
    grow={false}
  />
  <EuiFlexItem
    grow={false}
  >
    <div
      className="dscGridToolbarControlGroup"
    >
      <div
        className="dscGridToolbarControl"
      >
        keyboard
      </div>
      <div
        className="dscGridToolbarControl"
      >
        display
      </div>
      <div
        className="dscGridToolbarControl"
      >
        fullScreen
      </div>
    </div>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`renderCustomToolbar should render successfully 1`] = `
<EuiFlexGroup
  alignItems="center"
  className="dscGridToolbar"
  data-test-subj="dscGridToolbar"
  gutterSize="s"
  justifyContent="spaceBetween"
  responsive={false}
  wrap={true}
>
  <EuiFlexItem
    grow={false}
  >
    <EuiFlexGroup
      alignItems="center"
      gutterSize="s"
      responsive={false}
    >
      <React.Fragment>
        <EuiFlexItem
          grow={false}
        >
          <div
            className="dscGridToolbarControlButton"
          >
            column
          </div>
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <div
            className="dscGridToolbarControlButton"
          >
            columnSorting
          </div>
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <div
            className="dscGridToolbarControlButton"
          >
            additional
          </div>
        </EuiFlexItem>
      </React.Fragment>
    </EuiFlexGroup>
  </EuiFlexItem>
  <EuiFlexItem
    grow={false}
  >
    <EuiFlexGroup
      alignItems="center"
      gutterSize="s"
      responsive={false}
    >
      <EuiFlexItem
        grow={false}
      >
        <div
          className="dscGridToolbarControlGroup"
        >
          <div
            className="dscGridToolbarControlIconButton"
          >
            keyboard
          </div>
          <div
            className="dscGridToolbarControlIconButton"
          >
            display
          </div>
          <div
            className="dscGridToolbarControlIconButton"
          >
            fullScreen
          </div>
        </div>
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiFlexItem>
</EuiFlexGroup>
`;
